@@ -58,6 +58,7 @@ Release 0.20.3 - Unreleased
                via Andrew Purtell)
    HBASE-1982  [EC2] Handle potentially large and uneven instance startup
                times
+   HBASE-2062  Metrics documentation outdated
 
 Release 0.20.2 - November 18th, 2009
   INCOMPATIBLE CHANGES
